--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,4 +1,26 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: users
+#
+#  id                     :bigint           not null, primary key
+#  email                  :string           default(""), not null
+#  encrypted_password     :string           default(""), not null
+#  reset_password_token   :string
+#  reset_password_sent_at :datetime
+#  remember_created_at    :datetime
+#  name                   :string
+#  role                   :string
+#  status                 :string
+#  inactive_reason        :text
+#  phone_number           :string
+#  bio                    :text
+#  timezone               :string
+#  title                  :string
+#  linkedin_link          :string
+#  profile_pic            :string
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
