--- a/test/fixtures/matches.yml
+++ b/test/fixtures/matches.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: matches
+#
+#  id         :bigint           not null, primary key
+#  mentor_id  :bigint
+#  mentee_id  :bigint
+#  cohort_id  :bigint           not null
+#  active     :boolean
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   mentor_id: 1
