--- a/test/fixtures/programs.yml
+++ b/test/fixtures/programs.yml
@@ -2,13 +2,14 @@
 #
 # Table name: programs
 #
-#  id          :bigint           not null, primary key
-#  name        :string
-#  description :text
-#  creator_id  :integer
-#  contact_id  :integer
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id                :bigint           not null, primary key
+#  name              :string
+#  description       :text
+#  creator           :bigint           not null
+#  contact           :bigint           not null
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#  required_meetings :integer
 #
 
 one:
