--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: reviews
+#
+#  id         :bigint           not null, primary key
+#  match_id   :bigint           not null
+#  responsive :string
+#  body       :text
+#  rating     :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   match_id: 1
