fixed column names in cohort model, reannotated cohort model

--- a/test/fixtures/cohorts.yml
+++ b/test/fixtures/cohorts.yml
@@ -2,16 +2,16 @@
 #
 # Table name: cohorts
 #
-#  id            :bigint           not null, primary key
-#  program_id_id :bigint           not null
-#  cohort_name   :string
-#  description   :text
-#  start_date    :datetime
-#  end_date      :datetime
-#  creator_id_id :bigint           not null
-#  contact_id_id :bigint           not null
-#  created_at    :datetime         not null
-#  updated_at    :datetime         not null
+#  id          :bigint           not null, primary key
+#  program     :bigint           not null
+#  cohort_name :string
+#  description :text
+#  start_date  :datetime
+#  end_date    :datetime
+#  creator     :bigint           not null
+#  contact     :bigint           not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
 #
 
 one:
