--- a/test/fixtures/programs.yml
+++ b/test/fixtures/programs.yml
@@ -1,25 +1,13 @@
-# == Schema Information
-#
-# Table name: programs
-#
-#  id                :bigint           not null, primary key
-#  name              :string
-#  description       :text
-#  creator           :bigint           not null
-#  contact           :bigint           not null
-#  created_at        :datetime         not null
-#  updated_at        :datetime         not null
-#  required_meetings :integer
-#
+# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
   name: MyString
   description: MyText
-  creator_id: 1
-  contact_id: 1
+  creator_id: one
+  contact_id: one
 
 two:
   name: MyString
   description: MyText
-  creator_id: 1
-  contact_id: 1
+  creator_id: two
+  contact_id: two
