updated models, redid migrations from scratch, annotated models

--- a/test/fixtures/programs.yml
+++ b/test/fixtures/programs.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: programs
+#
+#  id          :bigint           not null, primary key
+#  name        :string
+#  description :text
+#  creator_id  :bigint           not null
+#  contact_id  :bigint           not null
+#  passcode    :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   name: MyString
