--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -2,23 +2,26 @@
 #
 # Table name: reviews
 #
-#  id         :bigint           not null, primary key
-#  match_id   :bigint           not null
-#  responsive :string
-#  body       :text
-#  rating     :integer
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id              :bigint           not null, primary key
+#  match_id        :bigint           not null
+#  responsive      :string
+#  answer_if_other :text
+#  feedback        :text
+#  rating          :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
 #
 
 one:
-  match_id: 1
+  match: one
   responsive: MyString
-  body: MyText
+  answer_if_other: MyText
+  feedback: MyText
   rating: 1
 
 two:
-  match_id: 1
+  match: two
   responsive: MyString
-  body: MyText
+  answer_if_other: MyText
+  feedback: MyText
   rating: 1
