--- a/test/fixtures/match_submissions.yml
+++ b/test/fixtures/match_submissions.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: match_submissions
+#
+#  id         :bigint           not null, primary key
+#  mentor_id  :bigint           not null
+#  mentee_id  :bigint           not null
+#  ranking    :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   mentor_id: one
