--- a/test/fixtures/cohort_members.yml
+++ b/test/fixtures/cohort_members.yml
@@ -8,6 +8,7 @@
 #  role       :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  capacity   :integer
 #
 
 one:
