ran annotate --models

--- a/test/fixtures/surveys.yml
+++ b/test/fixtures/surveys.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: surveys
+#
+#  id              :bigint           not null, primary key
+#  match_id        :integer
+#  responsive      :boolean
+#  answer_if_other :string
+#  body            :text
+#  rating          :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   match_id: 1
