trying to fix the mailers and fixed the dashboard role error for admin

--- a/test/fixtures/meetings.yml
+++ b/test/fixtures/meetings.yml
@@ -2,15 +2,15 @@
 #
 # Table name: meetings
 #
-#  id         :bigint           not null, primary key
-#  match_id   :bigint           not null
-#  complete   :boolean
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
-#  date       :date
-#  time       :time
-#  notes      :text
-#  location   :string
+#  id            :bigint           not null, primary key
+#  match_id      :bigint           not null
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  date          :date
+#  time          :time
+#  notes         :text
+#  location      :string
+#  location_type :string
 #
 
 one:
