--- a/test/fixtures/program_admins.yml
+++ b/test/fixtures/program_admins.yml
@@ -7,6 +7,7 @@
 #  program_id :bigint           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  role       :string
 #
 
 one:
