annotated models and prepared survey and match mailer to use general email template

--- a/test/fixtures/program_admins.yml
+++ b/test/fixtures/program_admins.yml
@@ -3,11 +3,10 @@
 # Table name: program_admins
 #
 #  id         :bigint           not null, primary key
-#  email      :string           not null
+#  user_id    :bigint           not null
 #  program_id :bigint           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
-#  role       :string
 #
 
 one:
