--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,5 +1,5 @@
 # Name of your application. Used to uniquely configure containers.
-service: my-app
+service: mentee
 
 # Name of the container image.
 image: my-user/my-app
