--- a/test/fixtures/program_admins.yml
+++ b/test/fixtures/program_admins.yml
@@ -2,11 +2,12 @@
 #
 # Table name: program_admins
 #
-#  id         :bigint           not null, primary key
-#  user_id    :bigint           not null
-#  program_id :bigint           not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id                  :bigint           not null, primary key
+#  user_id             :bigint           not null
+#  program_id          :bigint           not null
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#  created_by_admin_id :bigint
 #
 
 one:
