--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: mente
     runtime: ruby
     plan: free
-    buildcommand: "./bin/render-build.sh"
-    startcommand: "./bin/render-start.sh"
+    buildCommand: "./bin/render-build.sh"
+    startCommand: "./bin/render-start.sh"
     envVars:
       - key: RAILS_MASTER_KEY
       - key: WEB_CONCURRENCY
